--- a/solana/programs/settlement/Cargo.toml
+++ b/solana/programs/settlement/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 borsh = "1.5.1"
 num-derive = "0.4.2"
 num-traits = "0.2.19"
+shank = "0.4.2"
 solana-program = "2.0.0"
 thiserror = "1.0.61"
 
